--- a/application.properties
+++ b/application.properties
@@ -1,12 +1,16 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.database=MYSQL
-spring.jpa.hibernate.ddl-auto=update
-eureka.client.service-url.defaultZone=http://localhost:2222/eureka
 spring.datasource.username=root
-spring.datasource.password=July@2021
+spring.datasource.password=
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.defer-datasource-initialization = true
+spring.sql.init.mode=always
+eureka.client.service-url.defaultZone=http://localhost:2222/eureka
+
 hystrix.command.default.circuitBreaker.requestVolumeThreshold=4
 hystrix.command.default.metrics.rollingStats.timeInMilliseconds=10000
 hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
 hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
-spring.zipkin.base-url=http://localhost:4444
 spring.sleuth.sampler.percentage = 1.0
