--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,14 @@
-spring.datasource.username=root
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.sql.init.platform=h2
+spring.datasource.url=jdbc:h2:mem:WeCareDB
+spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.driverClassName=org.h2.driver
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
