--- a/USERMS.properties
+++ b/USERMS.properties
@@ -1,1 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/WeCareUser
+#spring.datasource.url=jdbc:mysql://localhost:3306/WeCareUser
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.sql.init.platform=h2
+spring.datasource.url=jdbc:h2:mem:weCareDB
+spring.datasource.username=sa
+spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.driver
+
