--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
