--- a/application.properties
+++ b/application.properties
@@ -2,6 +2,13 @@
 #spring.datasource.password=
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.sql.init.platform=h2
+spring.datasource.url=jdbc:h2:mem:weCareDB
+spring.datasource.username=sa
+spring.datasource.password=
+
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
