--- a/BOOKINGMS.properties
+++ b/BOOKINGMS.properties
@@ -1,1 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/WeCareBooking
+#spring.datasource.url=jdbc:mysql://localhost:3306/WeCareBooking
+
+spring.datasource.url=jdbc:h2:mem:WeCareBooking
+
