--- a/application.properties
+++ b/application.properties
@@ -10,7 +10,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode=always
